# MLops-vehicle-insurance

./: .gitignore  README.md  demo.py  hello.py  pyproject.toml  requirements.txt  setup.py
notebook/: data_mongoDB.ipynb
src/components/: data_ingestion.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: vehicle_data.py
src/entity/: config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
