[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models"
authors = [{name = "Febin CF", email = "febin.web3dev@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "from-root>=1.3.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pymongo[srv]==3.11",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
